Updated code and images linking

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
         </div>
     </nav>
 
-    <!-- LANDING ------------------------------------------------------------------------------------------------>
+    <!-- ANNOUNCEMENT ------------------------------------------------------------------------------------------------>
 
-    <div id="landing"></div>
+    <div id="announcement">
+        🪴 Welcome! My pots can be found at <a href="https://gardenshop.symbiop.com/products/linda-lu-arts-hand-painted-pots-cc" target="_blank">SymbiOp Garden Shop</a>. Hope you have a wonderful day! 🪴
+    </div>
 
     <!-- HOMEPAGE ----------------------------------------------------------------------------------------------->
 
@@ -123,7 +125,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Strawberry Skies</h4>
-                    <p class="itemPrice">$80</p>
+                    <p class="itemPrice sold">$80</p>
                     <p class="itemDescription">Strawberries against a pink sky, ready to plant your favorite Mt. Hood strawberries</p>
                 </div>
 
@@ -135,21 +137,9 @@
                             <div class="imageSelector" data-fileName="____"></div>
                         <div class="next"></div></div>
                     </div>
-                    <h4 class="itemTitle">Blackberries</h4>
+                    <h4 class="itemTitle">Title</h4>
                     <p class="itemPrice">$80</p>
-                    <p class="itemDescription">Mmmm... invasive</p>
-                </div>
-                <div class="___" style="display:none;">
-                    <div class="gallery">
-                        <div class="featuredImage""></div>
-                        <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="____"></div>
-                            <div class="imageSelector" data-fileName="____"></div>
-                        <div class="next"></div></div>
-                    </div>
-                    <h4 class="itemTitle">Native Wildflowers</h4>
-                    <p class="itemPrice">$80</p>
-                    <p class="itemDescription">Local native PNW wildflowers!</p>
+                    <p class="itemDescription">Description</p>
                 </div>
             </div>
             <a style="display:none;" class="button" href="#/">View All</a>
@@ -158,17 +148,33 @@
         <section id="inch_4.5">
             <h2>4.5" Pots</h2>
             <div class="itemsGrid">
+                <div class="vineMaple">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots4.5/vineMaple/vineMaple1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/vineMaple/vineMaple2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/vineMaple/vineMaple3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/vineMaple/vineMaple4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/vineMaple/vineMaple5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/vineMaple/vineMaple6.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Vine Maple</h4>
+                    <p class="itemPrice">$75</p>
+                    <p class="itemDescription">Inspired by vine maples seen in the fall at <a href="https://www.alltrails.com/trail/us/oregon/storey-burn-loop-trail" target="_blank">Storey Burn Loop Trail</a> in the Tillamook State Forest.</p>
+                </div>
                 <div class="hood">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
-                            <div class="imageSelector current" data-fileName="pots4.5/hood1.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots4.5/hood2.jpg"></div>
-                            <div class="imageSelector" data-fileName="pots4.5/hood3.jpg"></div>
+                            <div class="imageSelector current" data-fileName="pots4.5/hood/hood1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/hood/hood2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots4.5/hood/hood3.jpg"></div>
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Mt. Hood Sunset</h4>
-                    <p class="itemPrice">$40</p>
+                    <p class="itemPrice sold">$40</p>
                     <p class="itemDescription">Saturated rendition of Mt. Hood</p>
                 </div>
             </div>
@@ -261,7 +267,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Fungi</h4>
-                    <p class="itemPrice">$15</p>
+                    <p class="itemPrice sold">$15</p>
                     <p class="itemDescription">Fungi and fairy lights!</p>
                 </div>
                 <div class="insects">
