--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Vine Maple</h4>
-                    <p class="itemPrice">$75</p>
+                    <p class="itemPrice sold">$75</p>
                     <p class="itemDescription">Inspired by vine maples seen in the fall at <a href="https://www.alltrails.com/trail/us/oregon/storey-burn-loop-trail" target="_blank">Storey Burn Loop Trail</a> in the Tillamook State Forest.</p>
                 </div>
                 <div class="hood">
@@ -261,6 +261,33 @@
         <section id="inch_2">
             <h2>2" Pots</h2>
             <div class="itemsGrid">
+                <div class="snowberries">
+                    <div class="gallery">
+                        <div class="featuredImage""></div>
+                        <div class="imageController"><div class="prev"></div>
+                            <div class="imageSelector current" data-fileName="pots2/snowberries/snowberries1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot1-1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot1-2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot1-3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot1-4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot1-5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-5.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot2-6.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot3-1.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot3-2.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot3-3.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot3-4.jpg"></div>
+                            <div class="imageSelector" data-fileName="pots2/snowberries/snowberries_pot3-5.jpg"></div>
+                        <div class="next"></div></div>
+                    </div>
+                    <h4 class="itemTitle">Snowberries</h4>
+                    <p class="itemPrice">$15</p>
+                    <p class="itemDescription">Snowberries (Symphoricarpos albus) have white waxy berries that fruit in the fall and remain present on the shrub through wintertime.</p>
+                </div>
                 <div class="korok">
                     <div class="gallery">
                         <div class="featuredImage""></div>
