--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Scenery</h4>
-                    <p class="itemPrice">$15</p>
+                    <p class="itemPrice sold">$15</p>
                     <p class="itemDescription">Places around PDX, this one's of a service road in Forest Park</p>
                 </div>
             </div>
