Added commission info

--- a/index.html
+++ b/index.html
@@ -53,7 +53,24 @@
 
             <div class="content contactContent">
                 <h2>Contact</h2>
-                <p>Please reach out for commission inquiries and questions!</p>
+                <p>Please reach out for commission inquiries<span class="commissionInfoToggle"></span> and questions!</p>
+                <div class="commissionInfo">
+                    <h2>Commission Info</h2>
+                    <p>I charge for the consultation/ideation process, availability of pot(s), the size of the pot(s), and shipping. Pot sizes will also depend on availability, but range generally between 2" to 5.5", unless you would like a larger size (and in that case we can try to work something out). My pricing model is still under general revision, but would love to work for you to bring home your next new pot :&rpar;</p>
+
+                    <h3>1. Consultation/drafts — $10+</h3>
+                    <p>I'll send a draft and up to 2 revisions to your pot design. The base draft fee is $10, and each revision is $5-10 depending on the complexity.</p>
+
+                    <h3>2. Pot sizes — $15+</h3>
+                    <p><b>2" pots</b> — $15</p>
+                    <p><b>3.5"-4" pots</b> — $35-$60 depending on complexity</p>
+                    <p><b>4.5" pots</b> — $60-80 depending on complexity</p>
+                    <p><b>5.5" pots</b> — $80-120 depending on complexity</p>
+
+                    <h3>3. Shipping — $10</h3>
+                    <p>Shipping has a flat fee of $10. Unfortunately I only ship within the USA. Please reach out if you have any unanswered questions!</p>
+                    <button id="commissionInfoButton" class="button">Got it</button>
+                </div>
                 <p style="display:none;">Email: <a id="email" rel="noreferrer" title="Email" href="mailto:lindaluarts@gmail.com">lindaluarts@gmail.com</a></p>
 
                 <form class="contactForm" action="https://api.web3forms.com/submit" method="POST" target="_blank">
