Updated commission stuff

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="content contactContent">
                 <h2>Contact</h2>
-                <p>Please reach out for commission inquiries<span class="commissionInfoToggle"></span> and questions!</p>
+                <p>Please reach out for commission inquiries<span class="commissionInfoToggle" title="Click for comission information and FAQs"></span> and questions!</p>
                 <div class="commissionInfo">
                     <h2>Commission Info</h2>
                     <p>I charge for the consultation/ideation process, availability of pot(s), the size of the pot(s), and shipping. Pot sizes will also depend on availability, but range generally between 2" to 5.5", unless you would like a larger size (and in that case we can try to work something out). My pricing model is still under general revision, but would love to work for you to bring home your next new pot :&rpar;</p>
@@ -69,7 +69,7 @@
 
                     <h3>3. Shipping — $10</h3>
                     <p>Shipping has a flat fee of $10. Unfortunately I only ship within the USA. Please reach out if you have any unanswered questions!</p>
-                    <button id="commissionInfoButton" class="button">Got it</button>
+                    <button id="commissionInfoButton" class="button" title="Go back">Got it</button>
                 </div>
                 <p style="display:none;">Email: <a id="email" rel="noreferrer" title="Email" href="mailto:lindaluarts@gmail.com">lindaluarts@gmail.com</a></p>
 
@@ -95,7 +95,7 @@
                             <textarea class="form-textarea" id="message" name="message" placeholder="Your message" required ></textarea>
                         </div>
                     </div>
-                    <button class="formSubmit button" type="submit">Send Message</button>
+                    <button class="formSubmit button" type="submit" title="Send your message">Send Message</button>
                 </form>
             </div>
         </div>
@@ -130,7 +130,7 @@
                     <p class="itemPrice">$80</p>
                     <p class="itemDescription">Lazy summer afternoon at the gazebo of the Portland International Rose Test Garden</p>
                 </div>
-                <div class="strawberry">
+                <div class="strawberry sold">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -142,7 +142,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Strawberry Skies</h4>
-                    <p class="itemPrice sold">$80</p>
+                    <p class="itemPrice">$80</p>
                     <p class="itemDescription">Strawberries against a pink sky, ready to plant your favorite Mt. Hood strawberries</p>
                 </div>
 
@@ -165,7 +165,7 @@
         <section id="inch_4.5">
             <h2>4.5" Pots</h2>
             <div class="itemsGrid">
-                <div class="vineMaple">
+                <div class="vineMaple sold">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -178,10 +178,10 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Vine Maple</h4>
-                    <p class="itemPrice sold">$75</p>
+                    <p class="itemPrice">$75</p>
                     <p class="itemDescription">Inspired by vine maples seen in the fall at <a href="https://www.alltrails.com/trail/us/oregon/storey-burn-loop-trail" target="_blank">Storey Burn Loop Trail</a> in the Tillamook State Forest.</p>
                 </div>
-                <div class="hood">
+                <div class="hood sold">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -191,7 +191,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Mt. Hood Sunset</h4>
-                    <p class="itemPrice sold">$40</p>
+                    <p class="itemPrice">$40</p>
                     <p class="itemDescription">Saturated rendition of Mt. Hood</p>
                 </div>
             </div>
@@ -321,7 +321,7 @@
                     <p class="itemPrice">$15</p>
                     <p class="itemDescription">Ya ha ha!</p>
                 </div>
-                <div class="fungi">
+                <div class="fungi sold">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -331,7 +331,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Fungi</h4>
-                    <p class="itemPrice sold">$15</p>
+                    <p class="itemPrice">$15</p>
                     <p class="itemDescription">Fungi and fairy lights!</p>
                 </div>
                 <div class="insects">
@@ -353,7 +353,7 @@
                     <p class="itemPrice">$15</p>
                     <p class="itemDescription">Insects found in the PNW</p>
                 </div>
-                <div class="scenery">
+                <div class="scenery sold">
                     <div class="gallery">
                         <div class="featuredImage""></div>
                         <div class="imageController"><div class="prev"></div>
@@ -363,7 +363,7 @@
                         <div class="next"></div></div>
                     </div>
                     <h4 class="itemTitle">Scenery</h4>
-                    <p class="itemPrice sold">$15</p>
+                    <p class="itemPrice">$15</p>
                     <p class="itemDescription">Places around PDX, this one's of a service road in Forest Park</p>
                 </div>
             </div>
