Sold pots toggling

--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
         🪴 Welcome! My pots can be found at <a href="https://gardenshop.symbiop.com/products/linda-lu-arts-hand-painted-pots-cc" target="_blank">SymbiOp Garden Shop</a>. Hope you have a wonderful day! 🪴
     </div>
 
-    <!-- HOMEPAGE ----------------------------------------------------------------------------------------------->
+    <div id="toggleSoldContainer">
+        <p>Show sold pots</p>
+        <div id="toggleSold"></div>
+        <p>Hide sold pots</p>
+    </div>
+
+    <!-- HOMEPAGE ---------------------------------------------------------------------------------------------------->
 
     <div id="homeContent">
         <section id="inch_5.5">
@@ -162,7 +168,7 @@
             <a style="display:none;" class="button" href="#/">View All</a>
         </section>
 
-        <section id="inch_4.5">
+        <section id="inch_4.5" class="allPotsSold">
             <h2>4.5" Pots</h2>
             <div class="itemsGrid">
                 <div class="vineMaple sold">
