--- a/index.html
+++ b/index.html
@@ -107,11 +107,7 @@
         🪴 Welcome! My pots can be found at <a href="https://gardenshop.symbiop.com/products/linda-lu-arts-hand-painted-pots-cc" target="_blank">SymbiOp Garden Shop</a>. Hope you have a wonderful day! 🪴
     </div>
 
-    <div id="toggleSoldContainer">
-        <p>Show sold pots</p>
-        <div id="toggleSold"></div>
-        <p>Hide sold pots</p>
-    </div>
+    <div id="toggleSoldContainer"><p>Show all pots</p><div id="toggleSold"></div><p>Hide sold pots</p></div>
 
     <!-- HOMEPAGE ---------------------------------------------------------------------------------------------------->
 
