--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="content aboutContent">
                 <h2>About</h2>
                 <img src="./images/about/profile.jpg" alt="Hello!">
-                <p>Hello! My name is Linda and I paint plant pots inspired by native and naturalized organisms in the PNW region, local scenery from hikes and nearby neighborhoods, and organic forms and color palettes from natural world. The goal is to fuel my plant hoarding by selling some of my art. Pieces are made with acrylic and ink on terracotta plant pots, and then coated with polyurethane/liquitex varnish for waterproofing/weather protection.</p>
+                <p>Hello! My name is Linda and I paint plant pots inspired by native and naturalized organisms in the PNW region, local scenery from hikes and nearby neighborhoods, and organic forms and color palettes from the natural world. The goal is to fuel my plant hoarding by selling some of my art. Pieces are made with acrylic and ink on terracotta plant pots, and then coated with polyurethane/liquitex varnish for waterproofing/weather protection.</p>
                 <p class="hideOnMobile">When I'm not painting or gardening (or working my day job), I'm either attending events with <a href="https://www.meetup.com/viva-la-vegan" target="_blank" rel="noreferrer">NW Veg</a> and <a href="https://www.meetup.com/portland-metro-veggies" target="_blank" rel="noreferrer">Portland Metro Veggies</a>, keeping up with the <a href="https://www.wildmushrooms.org" target="_blank" rel="noreferrer">Oregon Mycological Society</a>, playing guitar, hiking, or spending time with friends. I love finding new plant-based food places and spotting fungi on walks. Thank you for visiting my website!</p>
             </div>
 
